--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,21 @@ Projekt/Mobile_Komponenten/Kastri/ThirdParty/OpenSSL/1.0.2o/iOS/libcrypto.a
 Projekt/Mobile_Komponenten/Kastri/ThirdParty/Firebase/iOS/Firebase.6.18.0.zip
 Projekt/Mobile_Komponenten/Kastri/ThirdParty/iOS/
 Projekt/Mobile_Komponenten/Kastri/ThirdParty/GoogleMobileAds/
+Projekt/Optima/Mobile/BestellApp-FPZ/__history/
+Projekt/Optima/Mobile/BestellApp-FPZ/Android/
+Projekt/Optima/Mobile/BestellApp-FPZ/Communication/__history/
+Projekt/Optima/Mobile/BestellApp-FPZ/const/__history/
+Projekt/Optima/Mobile/BestellApp-FPZ/Datenmodul/__history/
+Projekt/Optima/Mobile/BestellApp-FPZ/dcu/
+Projekt/Optima/Mobile/BestellApp-FPZ/Form/__history/
+Projekt/Optima/Mobile/BestellApp-FPZ/Objekt/__history/
+Projekt/Optima/Mobile/BestellApp-FPZ/Thread/__history/
+Projekt/Optima/Webservice/__history/
+Projekt/Optima/Webservice/bin/
+Projekt/Optima/Webservice/Datenbank/__history/
+Projekt/Optima/Webservice/dcu/
+Projekt/Optima/Webservice/Form/__history/
+Projekt/Optima/Webservice/Json/__history/
+Projekt/Optima/Webservice/Objekt/__history/
+Projekt/Optima/Mobile/BestellApp-FPZ/bin/
+Projekt/OptimaAPP.zip
