--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ Projekt/ASS/Mobile_Komponenten/Kastri/ThirdParty/Firebase/iOS/Firebase.6.18.0.zi
 Projekt/ASS/Mobile_Komponenten/Kastri/ThirdParty/GoogleMobileAds/
 Projekt/ASS/Mobile_Komponenten/Kastri/ThirdParty/iOS/
 Projekt/ASS/Mobile_Komponenten/Kastri/ThirdParty/OpenSSL/1.0.2o/iOS/libcrypto.a
+Projekt/ASS/Optima/Mobile/BestellApp-FPZ/bin/
