--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,16 @@ Projekt/ASS/Mobile_Komponenten/Kastri/ThirdParty/GoogleMobileAds/
 Projekt/ASS/Mobile_Komponenten/Kastri/ThirdParty/iOS/
 Projekt/ASS/Mobile_Komponenten/Kastri/ThirdParty/OpenSSL/1.0.2o/iOS/libcrypto.a
 Projekt/ASS/Optima/Mobile/BestellApp-FPZ/bin/
+Projekt/Projekte/PhotoOrga_Alt/__history/
+Projekt/Projekte/PhotoOrga_Alt/Android/
+Projekt/Projekte/PhotoOrga_Alt/Android64/
+Projekt/Projekte/PhotoOrga_Alt/bin/
+Projekt/Projekte/PhotoOrga_Alt/Datenmodul/__history/
+Projekt/Projekte/PhotoOrga_Alt/DB/__history/
+Projekt/Projekte/PhotoOrga_Alt/dcu/
+Projekt/Projekte/PhotoOrga_Alt/Form/__history/
+Projekt/Projekte/PhotoOrga_Alt/Frame/__history/
+Projekt/Projekte/PhotoOrga_Alt/Objekt/__history/
+Projekt/Projekte/PhotoOrga_Alt/Thread/__history/
+Projekt/Projekte/PhotoOrga_Alt/types/__history/
+Projekt/Projekte/PhotoOrga_Alt/Win32/
