--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ Test/Thumbnails/Skalieren/Test 2/Win32/
 Test/Thumbnails/Skalieren/Test 3/__history/
 Test/Thumbnails/Skalieren/Test 3/Android/
 Test/Thumbnails/Skalieren/Test 3/Android64/
+Projekt/Komponenten/TMS FMX Cloud Pack v3.7.4.0 (20 Dec 2022) for Delphi & CB XE7-11 Alexandria Full Source/
+Projekt/Komponenten/TMS FNC Cloud Pack v2.5.0.4 (16 Feb 2023) for Delphi & CB XE7-11 Alexandria Full Source/
