--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ Projekt/TSI/Projekt/TSIWebServer/dcu/
 Projekt/TSI/Projekt/TSIWebServer/Form/__history/
 Projekt/TSI/Projekt/TSIWebServer/Objekt/__history/
 Projekt/TSI/Projekt/TSIWebServer/WebModule/__history/
+Projekt/Allgemein/Vcl/Objekt/__history/
