--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,12 @@ Projekt/Mobile/PhotoOrga_Alt/Objekt/__history/
 Projekt/Mobile/PhotoOrga_Alt/Thread/__history/
 Projekt/Mobile/PhotoOrga_Alt/types/__history/
 Projekt/Mobile/PhotoOrga_Alt/Win32/Release/
+Projekt/Filesaver/Allgemein/Objekt/__history/
+Projekt/Filesaver/UI/__history/
+Projekt/Filesaver/UI/dcu/
+Projekt/Filesaver/UI/Form/__history/
+Projekt/Filesaver/UI/bin/FilesaverUI.exe
+Projekt/Filesaver/UI/FilesaverUI.res
+Projekt/Filesaver/UI/FilesaverUI.identcache
+Projekt/Filesaver/UI/FilesaverUI.dproj.local
+Projekt/Filesaver/FileSaverGroup.groupproj.local
