--- a/Projekt/Energieverbrauch/Win/Pflege/Energieverbrauch.dproj
+++ b/Projekt/Energieverbrauch/Win/Pflege/Energieverbrauch.dproj
@@ -102,9 +102,9 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="..\..\..\Log4d\FastMM\FastMM4.pas"/>
-        <DCCReference Include="..\..\..\Log4d\FastMM\Translations\German\by Thomas Speck\FastMM4Messages.pas"/>
-        <DCCReference Include="..\..\..\Log4d\Log4D.pas"/>
+        <DCCReference Include="..\..\..\..\Komponenten\Log4d\FastMM\FastMM4.pas"/>
+        <DCCReference Include="..\..\..\..\Komponenten\Log4d\FastMM\Translations\German\by Thomas Speck\FastMM4Messages.pas"/>
+        <DCCReference Include="..\..\..\..\Komponenten\Log4d\Log4D.pas"/>
         <DCCReference Include="Form\Form.Energieverbrauch.pas">
             <Form>frm_Energieverbrauch</Form>
         </DCCReference>
