--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,42 @@ Projekt/Filesaver/FileSaverGroup.groupproj.local
 *.~4~
 *.~5~
 *.~6~
+Project1.dproj.local
+Project1.identcache
+Project1.res
+Projekt/ASS/BasCloud/App/Form/__recovery/__recovery.ini
+Projekt/ASS/BasCloud/App/Form/__recovery/
+~10~
+*.~10~
+*.~11~
+*.~12~
+*.~7~
+*.~8~
+*.~9~
+Projekt/Energieverbrauch/fmx/Android/
+Projekt/Energieverbrauch/fmx/dcu/
+*.~13~
+*.~19~
+*.~20~
+*.~21~
+*.~22~
+*.~23~
+*.~24~
+*.~25~
+*.~26~
+*.~27~
+*.~28~
+*.~14~
+*.~15~
+*.~16~
+*.~17~
+Projekt/Energieverbrauch/fmx/Form/__recovery/
+Test/Sidebar/Test 1/SidebarTest1.res
+Test/Sidebar/Test 1/Win32/
+Win32/
+Test/Sidebar/Test 1/SidebarTest1.dproj.local
+Test/Sidebar/Test 1/SidebarTest1.identcache
+Projekt/Energieverbrauch/fmx/EnergieverbrauchApp.dproj.local
+Projekt/Energieverbrauch/fmx/EnergieverbrauchApp.identcache
+Projekt/Energieverbrauch/fmx/EnergieverbrauchApp.res
+Projekt/Energieverbrauch/fmx/bin/32/EnergieverbrauchApp.exe
