--- a/Projekt/Energieverbrauch/Win/Pflege/Energieverbrauch.dproj
+++ b/Projekt/Energieverbrauch/Win/Pflege/Energieverbrauch.dproj
@@ -137,6 +137,10 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="Form\Form.Zaehler.pas">
+            <Form>frm_Zaehler</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
