--- a/.gitignore
+++ b/.gitignore
@@ -291,3 +291,5 @@ Projekt/Energieverbrauch/fmx/EnergieverbrauchApp.dproj.local
 Projekt/Energieverbrauch/fmx/EnergieverbrauchApp.identcache
 Projekt/Energieverbrauch/fmx/EnergieverbrauchApp.res
 Projekt/Energieverbrauch/fmx/bin/32/EnergieverbrauchApp.exe
+Projekt/Energieverbrauch/fmx/Android64/Release/
+Projekt/Energieverbrauch/fmx/Form/__history/
