--- a/.gitignore
+++ b/.gitignore
@@ -293,3 +293,11 @@ Projekt/Energieverbrauch/fmx/EnergieverbrauchApp.res
 Projekt/Energieverbrauch/fmx/bin/32/EnergieverbrauchApp.exe
 Projekt/Energieverbrauch/fmx/Android64/Release/
 Projekt/Energieverbrauch/fmx/Form/__history/
+Minitools/JWT/bin/
+Minitools/JWT/dcu/
+Projekt/Webserver/__history/
+Projekt/Webserver/dcu/
+Projekt/Webserver/Webservice.identcache
+Projekt/Webserver/Webservice.dproj.local
+Projekt/Webserver/WebserviceGroup.groupproj.local
+Projekt/Webserver/bin/Webservice.exe
