--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,8 @@ Projekt/Webserver/Webservice.identcache
 Projekt/Webserver/Webservice.dproj.local
 Projekt/Webserver/WebserviceGroup.groupproj.local
 Projekt/Webserver/bin/Webservice.exe
+Projekt/Energieverbrauch/fmx/Objekt/__history/
+Projekt/Webserver/DB/Energieverbrauch/__history/
+Projekt/Energieverbrauch/fmx/__history/
+Projekt/Webserver/Webmodul/__history/
+Projekt/Webserver/WebmodulAction/Energieverbrauch/__history/
