--- a/Projekt/Webserver/Webservice.dproj
+++ b/Projekt/Webserver/Webservice.dproj
@@ -188,6 +188,13 @@
         <DCCReference Include="Payload\Energieverbrauch\Payload.EnergieverbrauchCalc.pas"/>
         <DCCReference Include="WebmodulAction\Energieverbrauch\wma.EnergieverbrauchKomplNeuBerechnen.pas"/>
         <DCCReference Include="WebmodulAction\Energieverbrauch\wma.EnergieverbrauchVerbrauch.pas"/>
+        <DCCReference Include="Payload\Energieverbrauch\Payload.EnergieverbrauchVerbrauchMonate.pas"/>
+        <DCCReference Include="Json\Energieverbrauch\Json.EnergieverbrauchVerbrauchMonate.pas"/>
+        <DCCReference Include="Json\Energieverbrauch\Json.EnergieverbrauchVerbrauchMonateList.pas"/>
+        <DCCReference Include="WebmodulAction\Energieverbrauch\wma.EnergieverbrauchVerbrauchVerbrauchMonate.pas"/>
+        <DCCReference Include="Json\Energieverbrauch\Json.EnergieverbrauchVerbrauchJahre.pas"/>
+        <DCCReference Include="Json\Energieverbrauch\Json.EnergieverbrauchVerbrauchJahreList.pas"/>
+        <DCCReference Include="WebmodulAction\Energieverbrauch\wma.EnergieverbrauchVerbrauchVerbrauchJahre.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
